# jetemail-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
jetemail/: __init__.py  _client.py  _http_client.py  _types.py  batch.py  emails.py  exceptions.py  webhook_verification.py
tests/: conftest.py  test_batch.py  test_emails.py  test_webhook_verification.py
